[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/rope.png" type="Texture" id=1]
[ext_resource path="res://assets/player.gd" type="Script" id=2]
[ext_resource path="res://resources/player.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Grounded" type="Node2D" parent="."]

[node name="RayCast2D1" type="RayCast2D" parent="Grounded"]
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="Grounded"]
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="Grounded"]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="Bounds" type="Node2D" parent="."]

[node name="LeftCast" type="RayCast2D" parent="Bounds"]
position = Vector2( -3, 0 )
scale = Vector2( 1, 2 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 2

[node name="RightCast" type="RayCast2D" parent="Bounds"]
position = Vector2( 3, 0 )
scale = Vector2( 1, 2 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="TopCast" type="RayCast2D" parent="Bounds"]
position = Vector2( 0, -3 )
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, -1 )
collision_mask = 2

[node name="RopeLine" type="Line2D" parent="."]
z_index = -1
points = PoolVector2Array( 0, 0, 100, 0 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 1 )
texture_mode = 1
